version ajouter 04-1-2025